# CIS6030_Assignment

./: .gitignore  README.md  main.cpp
A1_Solution/DB_lib/: dbComponents.h
A1_Solution/assets/: A 1_data_validate.xlsx
A1_Solution/newBPTree/: ssBPTree.cpp
A1_Solution/util/: forBlockANDRecordGeneration.h
Assignment1/A1_Solution/: CMakeLists.txt  README.md  main.cpp
Assignment1/A1_Solution/BplusTree_lib/: BplusTree.cpp  BplusTree.h
Assignment1/A1_Solution/BplusTree_library/: BplusTree.cpp  BplusTree.h
Assignment1/A1_Solution/DB_lib/: dbComponents.cpp  dbComponents.h  dbIO.cpp  dbIO.h
Assignment1/A1_Solution/DB_library/: dbComponents.cpp
Assignment1/A1_Solution/TestKit/: generalTest.cpp  generalTest.h
Assignment1/A1_Solution/assets/: dataFile.txt
Assignment1/A1_Solution/db_library/: dbComponents.h
Assignment1/A1_Solution/dblibrary/: dbComponents.cpp  dbComponents.h
Assignment1/A1_Solution/newBPTree/: ssBPTree.cpp  ssBPTree.h
Assignment1/A1_Solution/newBPTree_lib/: newBPTree.cpp  newBPTree.h  ssBPTree.cpp  ssBPTree.h
Assignment1/A1_Solution/util/: forBPTreeBuild.h  forBlockANDRecordGeneration.h  forDataFileCRUD.h  utility.h  veryTrickyMethods.h  writeBlockToBPTreeLeaf.h
DB_lib/: dbComponents.cpp
Hangouts/: DB Lec1.docx
Slides/: 01_Overview.pptx  02_FileIndex.pptx
newBPTree/: ssBPTree.h
util/: veryTrickyMethods.h
